#Commit setup environment all

--- a/react-admin/examples/tutorial/tsconfig.node.json
+++ b/react-admin/examples/tutorial/tsconfig.node.json
@@ -3,7 +3,12 @@
     "composite": true,
     "module": "ESNext",
     "moduleResolution": "Node",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "paths": {
+        "react-admin": ["./node_modules/react-admin"],
+        "@mui/icons-material/*": ["./node_modules/@mui/icons-material/esm/*"]
+    }
   },
   "include": ["vite.config.ts"]
 }
