--- a/react-admin/examples/tutorial/package.json
+++ b/react-admin/examples/tutorial/package.json
@@ -11,7 +11,7 @@
     "dependencies": {
         "ra-data-json-server": "^5.0.0",
         "react": "^18.3.1",
-        "react-admin": "^5.0.0",
+        "react-admin": "workspace:^",
         "react-dom": "^18.3.1"
     },
     "devDependencies": {
